@@ -27,7 +27,6 @@ struct md_pkey_t;
 struct md_t;
 struct md_acme_acct_t;
 struct md_acmev2_acct_t;
-struct md_proto_t;
 struct md_store_t;
 struct md_result_t;
 
