@@ -456,7 +456,8 @@ apr_status_t md_acme_order_start_challenges(md_acme_order_t *order, md_acme_t *a
                 
             case MD_ACME_AUTHZ_S_PENDING:
                 rv = md_acme_authz_respond(authz, acme, store, challenge_types, 
-                                           md->pkey_spec, env, p, &setup_token, result);
+                                           md->pkey_spec, md->acme_tls_1_domains,
+                                           env, p, &setup_token, result);
                 if (APR_SUCCESS != rv) {
                     goto out;
                 }
